--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <div>新增的</div>
     <footer>
         <div class="footerone">
-       
+       <div>v2</div>
         <div class="second-footer clearfix">
                 <dl>
                     <dt>购物指南</a></dt>
